--- a/index.html
+++ b/index.html
@@ -2,16 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/zheng_website/favicon.ico" />
-    <link rel="apple-touch-icon" href="/zheng_website/apple-touch-icon.png" />
-    <link rel="manifest" href="/zheng_website/manifest.json" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <script type="module" crossorigin src="/zheng_website/assets/index.0e1201ba.js"></script>
-    <link rel="stylesheet" href="/zheng_website/assets/index.a1828b5c.css">
   </head>
   <body>
     <div id="root"></div>
-    
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
